tests/codegen/errors/reader/tests-infix-calls/atom.reader.error.reader.list.missing.close.after.infix/reader-list-missing-close-after-infix.mon
;; TEST-ID: tests.codegen.reader-error.reader-list-missing-close-after-infix
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/tests-infix-calls
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected ')' after infix expression
;; TEST-ATOM: atom.reader.error.reader.list.missing.close.after.infix
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.list.missing.close.after.infix
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected ')' after infix expression
;; TEST-READER-PATH: reader.c:6010 parser.infix
;; TEST-CODEGEN-PATH: diagnostic.parser.infix
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:6010 Expected ')' after infix expression
;; TEST-USES-ATOM: atom.reader.error.reader.list.missing.close.after.infix
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.infix
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/tests-infix-calls/atom.reader.error.reader.list.missing.close.after.infix
;; TEST-MENU-PATH: codegen/errors/reader/tests-infix-calls/atom.reader.error.reader.list.missing.close.after.infix
;; TEST-ATOM-LEAF: atom.reader.error.reader.list.missing.close.after.infix
;; TEST-CLI-TARGET: codegen errors reader tests-infix-calls

(module Main)
(show (1 + ))
